# rust-workbench

./: Cargo.toml  readme.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
password-generator/: Cargo.toml  readme.md
password-generator/src/: constants.rs  lib.rs  main.rs  pw_horse.rs
